@@ -1,3 +1,8 @@
+2014-10-13  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/63419
+	* g++.dg/torture/pr63419.C: New testcase.
+
 2014-10-12  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	PR target/59401
